Set compression to 50 is the format is png

Summary:
This reverts commit 0f259d9be2bd6be8e8e28b46f22e5ba7d5720273.

If no value for compression is set the png handler will fallback to using quality to determine compression resulting in huge files. See also the Discussion in D19591.

BUG: 406263
FIXED-IN: 19.04.1

Test Plan:
Save png with quality configured to 100.
The picture file should have a reasonable size.

Reviewers: #spectacle, cfeck, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: shubham, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D20985